test/rules/ok/wf_04.zc
(* We divide by zero, it is allowed in the definition and we can
   use rlet_unfold since it does not perform field-rewriting. *)

prove [
  x <-$ Fq \ 0;
  y <-$ Fq \ (1/x);
  z <-$ Fq \ (1/(y*x - 1));
] : true.
rnorm.
print_goals : t2.